# poe-bittensor

./: .gitignore  CLAUDE.md  README.md  SPEC.md  requirements-ci.txt
.github/workflows/: ci.yml
commitment_helper/: Nargo.toml
commitment_helper/src/: main.nr
docs/: BIT_PROPOSAL.md  ECONOMIC_MODEL.md  SUBNET_OWNER_GUIDE.md  VALIDATOR_GUIDE.md
poe-subnet/: requirements.txt  setup.py
poe-subnet/neurons/: copier.py  miner.py  validator.py
poe-subnet/poe_subnet/: __init__.py  config.py  mock.py  protocol.py  reward.py  telemetry.py
poe-subnet/scripts/: setup_local_chain.sh  test_integration.py
poe-subnet/tests/: test_axon_dendrite.py  test_chain.py  test_forward_verification.py  test_protocol.py  test_reward.py  test_uids.py
poe-validator/: pyproject.toml
poe-validator/poe/: __init__.py  challenge.py  config.py  hooks.py  prover.py  storage.py  verifier.py  zkverify.py
poe-validator/tests/: test_challenge.py  test_pipeline.py  test_prover.py  test_storage.py  test_verifier.py
poe-witness/: Cargo.toml
poe-witness/src/: blake3_field.rs  lib.rs  main.rs  normalize.rs  types.rs  witness.rs
poe-witness/tests/: roundtrip.rs
poe-zkverify/: Cargo.toml
poe-zkverify/src/: attestation.rs  bridge.rs  hex_utils.rs  lib.rs  main.rs  types.rs
poe_circuit/: Nargo.toml  build.sh
poe_circuit/src/: commitment.nr  main.nr  normalization.nr  types.nr
poe_full_arithmetic/: Nargo.toml
poe_full_arithmetic/src/: main.nr
poe_minimal/: Nargo.toml  build.sh
testnet/: RESULTS_TEMPLATE.md
tla/: PoE.cfg  PoE.tla  poe_arithmetic_z3.py  poe_arithmetic_z3_fast.py
(+16 files in other folders)
