[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poe-validator"
version = "0.1.0"
description = "Proof of Evaluation - Bittensor validator integration"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["poe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
