[package]
name = "poe-zkverify"
version = "0.1.0"
edition = "2021"
description = "zkVerify bridge for PoE proof submission and attestation"

[features]
default = []
testnet = []

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
thiserror = "2"
hex = "0.4"
sha3 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
wiremock = "0.6"
